examples/datalog/12_errors/20_unsafe_negation_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unsafe_neg_err
Knowledge graph 'test_unsafe_neg_err' created.
Switched to knowledge graph: test_unsafe_neg_err
> .kg use test_unsafe_neg_err
Switched to knowledge graph: test_unsafe_neg_err
> +banned[(1), (2)].
Inserted 2 fact(s) into 'banned'.
> +unsafe_rule(X) :- !banned(X).
Script error: Failed to register rule: Unsafe negation in rule 'unsafe_rule': Variable(s) X in negated atom !banned(...) must be bound by a positive body atom. Range restriction violation.
